added api fetching

--- a/index.html
+++ b/index.html
@@ -19,19 +19,16 @@
   <body>
     <div class="quote-container" id="quote-container">
       <div class="quote-text">
-        <i class="fas fa-quote-left"></i>
-        <span id="quote">Цитата Цитата Цитата Цитата</span>
-      </div>
-      <div class="quote-author">
-        <span id="author">Автор</span>
+        <span id="quote"></span>
       </div>
       <div class="button-container">
         <button class="vk-button" id="vk" title="Share to VK">
           <i class="fab fa-vk"></i>
         </button>
-        <button id='new-quote'>Новая цитата</button>
+        <button id="new-quote">Новый совет</button>
       </div>
     </div>
+    <div class="loader" id="loader"></div>
     <script src="./script.js"></script>
   </body>
 </html>
