--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quote Generator</title>
+    <title>Advice Generator</title>
     <link
       rel="icon"
       type="image/png"
@@ -15,6 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script type="text/javascript" src="https://vk.com/js/api/share.js?95" charset="windows-1251"></script>
   </head>
   <body>
     <div class="quote-container" id="quote-container">
@@ -22,8 +23,9 @@
         <span id="quote"></span>
       </div>
       <div class="button-container">
-        <button class="vk-button" id="vk" title="Share to VK">
-          <i class="fab fa-vk"></i>
+        <script type="text/javascript">
+          document.write(VK.Share.button(false,{type: "custom", text: "<button class='vk-button' id='vk' title='Share to VK'><i class='fab fa-vk'></i></button>"}));
+          </script>
         </button>
         <button id="new-quote">Новый совет</button>
       </div>
